--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </ul>
       </section>
 
-      <div class="footer">Made with 💅, ✨ and Love RK • © 2025 Sophia’s Nail Studio</div>
+      <div class="footer">Made with  Love RK 💅 ✨  • © 2025 Sophia’s Nail Studio</div>
     </div>
   </body>
 </html>
